Change TsidExtractingIdFieldMapper to not be stored.